--- a/public/css/style-principal.css
+++ b/public/css/style-principal.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&family=Quicksand:wght@300;400;600&display=swap");
+.container-accueil {
+  margin: auto;
+  text-align: center;
+}
+
 main {
   height: 90%;
   width: 100%;
